[gd_scene load_steps=9 format=3 uid="uid://c3onktb47ombf"]

[ext_resource type="Script" path="res://Weapons/scripts/torch.gd" id="1_178hs"]
[ext_resource type="PackedScene" uid="uid://c22hhh4jjwjj0" path="res://Components/scenes/hitbox_component.tscn" id="1_a7sse"]
[ext_resource type="Script" path="res://Components/Resources/hit_stats.gd" id="2_bhd1e"]
[ext_resource type="Texture2D" uid="uid://bq3ywiq2obk3u" path="res://Art/Guns/flashbang.png" id="2_w1dex"]

[sub_resource type="Animation" id="Animation_jrdr4"]
length = 0.001

[sub_resource type="Animation" id="Animation_adkim"]
resource_name = "slash"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4a1k"]
_data = {
"RESET": SubResource("Animation_jrdr4"),
"slash": SubResource("Animation_adkim")
}


[node name="Torch" type="Node2D"]
light_mask = 3
visibility_layer = 3
script = ExtResource("1_178hs")
shootSpeed = 5.0

[node name="Marker2D" type="Marker2D" parent="."]
rotation = -0.261799

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, -1)
scale = Vector2(0.292614, 0.292614)
texture = ExtResource("2_w1dex")
offset = Vector2(0, -20)


[node name="HitboxComponent" parent="." instance=ExtResource("1_a7sse")]
position = Vector2(-4.76837e-07, -9.53674e-07)
scale = Vector2(1, 1)
hitStats = SubResource("Resource_g2vas")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(9.99999, 7.15256e-07)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_tpkbh")
disabled = true
debug_color = Color(0.508186, 0.166467, 0.812612, 0.42)


[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m4a1k")
}

[node name="ShootSpeedTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Sprite2D/HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="ShootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]

